# cookiecutters

./: .markdownlint-cli2.jsonc  LICENSE  README.md  cookiecutter.json  generate-examples.sh  pyproject.toml  render-tests.sh
.github/: CODEOWNERS  auto_assign.yaml  dependabot.yaml  labeler.yaml  labeler.yml  settings.yml
.github/workflows/: ci.yaml  copyright.yaml  issues.yaml  pr-assign.yaml  pr.yaml
rust-crate/: README.md
rust-workspace/: README.md  cookiecutter.json
rust-workspace/{{ cookiecutter.repo_name }}/: README.md
rust-workspace/{{ cookiecutter.repo_name }}/{{ cookiecutter.crate_sub_dir }}/: README.md
rust/repo/: README.md  cookiecutter.json  local_extensions.py
rust/repo/examples/arch-x86_64/: cookiecutter.yaml  from-default.diff
rust/repo/examples/arch-x86_64/output/repository/: CLA.md  Cargo.toml  deny.toml  rust-toolchain.toml
rust/repo/examples/arch-x86_64/output/repository/.github/workflows/: ci.yaml  issues.yaml
rust/repo/examples/basic-gpl3/output/repository/: Cargo.toml  deny.toml
rust/repo/examples/basic/output/repository/: Cargo.toml
rust/repo/examples/crate/: cookiecutter.yaml  from-default.diff
rust/repo/examples/crate/output/repository/: Cargo.toml  README.md  rustfmt.toml
rust/repo/examples/crate/output/repository/src/: lib.rs
rust/repo/examples/default/output/repository/: CHANGELOG.md  Cargo.toml  README.md
rust/repo/examples/default/output/repository/.github/: CODEOWNERS  settings.yml
rust/repo/examples/default/output/repository/.github/workflows/: ci.yaml  copyright.yaml  issues.yaml
rust/repo/examples/default/output/repository/crate/name/: Cargo.toml  README.md
rust/repo/examples/different-org/: cookiecutter.yaml
rust/repo/examples/different-org/output/repository/: Cargo.toml  LICENSE
rust/repo/examples/different-org/output/repository/.github/: dependabot.yaml  settings.yml
rust/repo/examples/different-org/output/repository/.github/workflows/: copyright.yaml  pr-assign.yaml
rust/repo/examples/different-org/output/repository/crate/name/: Cargo.toml
rust/repo/examples/license-agpl3/: from-default.diff
rust/repo/examples/license-agpl3/output/repository/: CHANGELOG.md  Cargo.toml  deny.toml
rust/repo/examples/license-agpl3/output/repository/.github/: auto_assign.yaml  labeler.yaml  settings.yml
rust/repo/examples/license-agpl3/output/repository/crate/name/: Cargo.toml
rust/repo/examples/license-agpl3/output/repository/crate/name/src/: lib.rs
rust/repo/examples/license-gpl3/: from-default.diff
rust/repo/examples/license-gpl3/output/repository/: Cargo.toml  README.md
rust/repo/examples/license-gpl3/output/repository/.github/: CODEOWNERS  labeler.yml  pull_request_template.md  triage-labeler.yaml
rust/repo/examples/submodules/: cookiecutter.yaml
rust/repo/examples/submodules/output/repository/: .markdownlint-cli2.jsonc  CODE_OF_CONDUCT.md
rust/repo/examples/submodules/output/repository/.github/: auto_assign.yml
rust/repo/examples/submodules/output/repository/.github/workflows/: copyright.yaml  pr.yaml
rust/repo/examples/submodules/output/repository/crate/name/: README.md
rust/repo/hooks/: post_gen_project.py
rust/repo/tests/basic/: cookiecutter.yaml
rust/repo/tests/basic-agpl3/: cookiecutter.yaml
rust/repo/tests/basic-agpl3/output/repository/: Cargo.toml  LICENSE  deny.toml
rust/repo/tests/basic-agpl3/output/repository/.github/workflows/: pr.yaml
rust/repo/tests/basic-gpl3/: cookiecutter.yaml
rust/repo/tests/basic-gpl3/output/repository/: deny.toml
rust/repo/tests/basic/output/repository/: Cargo.toml  README.md
rust/repo/tests/basic/output/repository/.github/: CODEOWNERS  dependabot.yaml  labeler.yaml
rust/repo/tests/basic/output/repository/crate/name/: Cargo.toml
rust/repo/tests/crate/output/repository/: Cargo.toml  README.md
rust/repo/{{ cookiecutter.repo_name }}/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml
rust/repo/{{ cookiecutter.repo_name }}/.github/: CODEOWNERS  dependabot.yaml  labeler.yaml  settings.yml
rust/repo/{{ cookiecutter.repo_name }}/.github/workflows/: ci.yaml  copyright.yaml  issues.yaml  pr-assign.yaml  pr.yaml
rust/repo/{{ cookiecutter.repo_name }}/src/: lib.rs
rust/repo/{{ cookiecutter.repo_name }}/{{ cookiecutter.crate_sub_dir }}/: Cargo.toml  README.md
rust/workspace-crate/: README.md  cookiecutter.json  local_extensions.py
rust/workspace-crate/examples/arch-x86_64/: from-default.diff
rust/workspace-crate/examples/arch-x86_64/output/crate/name/: Cargo.toml  README.md
rust/workspace-crate/examples/basic-apache/: cookiecutter.yaml
rust/workspace-crate/examples/basic-apache/output/crate/name/: Cargo.toml
rust/workspace-crate/examples/basic-x86_64/: cookiecutter.yaml
rust/workspace-crate/examples/license-agpl3/: from-default.diff
rust/workspace-crate/examples/license-apache/: from-default.diff
rust/workspace-crate/examples/license-gpl3/: cookiecutter.yaml  from-default.diff
rust/workspace-crate/examples/license-gpl3/output/crate/name/: README.md
rust/workspace-crate/tests/basic/: cookiecutter.yaml
rust/workspace-crate/tests/basic-agpl3/: cookiecutter.yaml
rust/workspace-crate/tests/basic-agpl3/output/crate/name/: Cargo.toml
rust/workspace-crate/tests/basic-apache/: cookiecutter.yaml
rust/workspace-crate/tests/basic-apache/output/crate/name/: README.md
rust/workspace-crate/tests/basic-gpl3/output/crate/name/: Cargo.toml
rust/workspace-crate/tests/basic-x86_64/output/crate/name/: Cargo.toml
rust/workspace-crate/{{ cookiecutter.crate_sub_dir }}/: Cargo.toml  README.md
rust/workspace-crate/{{ cookiecutter.crate_sub_dir }}/src/: lib.rs
tests/: conftest.py  paths.py
tests/rust/: test_repo.py
tests/rust/repo/expected/default/repository/: README.md
tests/rust/repo/expected/default/repository/.github/: CODEOWNERS
tests/rust/repo/expecteds/default/repository/.github/: labeler.yaml
{{ cookiecutter.repo_name }}/: Cargo.toml
{{ cookiecutter.repo_name }}/.github/workflows/: issues.yaml
{{ cookiecutter.repo_name }}/{{ cookiecutter.crate_sub_dir }}/: Cargo.toml
(+7 files in other folders)
