[tool.poetry]
name = "cookiecutters"
version = "0.1.0"
description = "MobileCoin cookiecutter templates"
authors = ["MobileCoin"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
cookiecutter = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
