{%- if cookiecutter.type == "workspace" -%}
[workspace]
members = [
    "{{ cookiecutter.crate_sub_dir }}",
]

# We need to explicitly specify resolver 2.
# We shouldn't have to per https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html, but that does not appear to be the case
resolver = "2"

[workspace.package]
{%- else -%}
[package]
name = "{{ cookiecutter.crate_name }}"
version = "{{ cookiecutter.version }}"
{%- endif %}
authors = ["MobileCoin"]
{%- if cookiecutter.type == "single-crate" %}
# See https://crates.io/category_slugs for valid categories
categories = ["{{ cookiecutter.crate_categories.split()|join('", "') }}"]
description = "{{ cookiecutter.crate_description }}"
{%- endif %}
edition = "2021"
{%- if cookiecutter.type == "single-crate" %}
# See https://crates.io/keywords for the common keywords
keywords = ["{{ cookiecutter.crate_keywords.split()|join('", "') }}"]
{%- endif %}
license = "{{ cookiecutter.license }}"
{%- if cookiecutter.type == "single-crate" %}
readme = "README.md"
{%- endif %}
repository = "https://github.com/{{ cookiecutter.github_org }}/{{ cookiecutter.repo_name }}"
rust-version = "1.68"

[profile.release]
lto = "thin"
{% if cookiecutter.type == "workspace" %}
[workspace.metadata.release]
{%- else %}
[package.metadata.release]
{%- endif %}
shared-version = true
dev-version-ext = "beta.0"
consolidate-commits = true
consolidate-pushes = true
tag-name = "v{{ "{{version}}" }}"
pre-release-replacements = [
    { file = "README.md", search = "{{ cookiecutter.crate_namespace_prefix }}[a-z-]+/[0-9.]+", replace = "{{ "{{crate_name}}/{{version}}" }}" },
    { file = "CHANGELOG.md", search = "Unreleased", replace = "{{ '{{version}}' }}", min = 1 },
    { file = "CHANGELOG.md", search = "\\.\\.\\.HEAD", replace="...{{ '{{tag_name}}' }}", exactly = 1 },
    { file = "CHANGELOG.md", search = "ReleaseDate", replace= "{{ '{{date}}' }}", min = 1},
    { file = "CHANGELOG.md", search = "<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/mobilecoinfoundation/{{ cookiecutter.repo_name }}/compare/{{ '{{tag_name}}' }}...HEAD", exactly = 1},
]
{% if cookiecutter.type == "single-crate" %}
[dependencies]
{%- endif %}