[package]
name = "{{ cookiecutter.crate_name }}"
version = "{{ cookiecutter.version }}"
authors = ["MobileCoin"]
# See https://crates.io/category_slugs for valid categories
categories = ["{{ cookiecutter.crate_categories.split()|join('", "') }}"]
description = "{{ cookiecutter.crate_description }}"
edition = "2021"
# See https://crates.io/keywords for the common keywords
keywords = ["{{ cookiecutter.crate_keywords.split()|join('", "') }}"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/{{ cookiecutter.repo_name }}"
rust-version = "1.62.1"

[dependencies]
