[package]
name = "{{ cookiecutter.crate_name }}"
version = "{{ cookiecutter.version }}"
authors = { workspace = true }
# See https://crates.io/category_slugs for valid categories
categories = ["{{ cookiecutter.crate_categories.split()|join('", "') }}"]
description = "{{ cookiecutter.crate_description }}"
edition = { workspace = true }
# See https://crates.io/keywords for the common keywords
keywords = ["{{ cookiecutter.crate_keywords.split()|join('", "') }}"]
{%- if cookiecutter.license == "Same as Workspace" %}
license = { workspace = true }
{%- else %}
license = "{{ cookiecutter.license }}"
{%- endif %}
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true}

[dependencies]
