[package]
name = "{{ cookiecutter.crate_name }}"
version = "{{ cookiecutter.version }}"
authors = { workspace = true }
# See https://crates.io/category_slugs for valid categories
categories = ["{{ cookiecutter.crate_categories.split()|join('", "') }}"]
description = "{{ cookiecutter.crate_description }}"
edition = { workspace = true }
# See https://crates.io/keywords for the common keywords
keywords = ["{{ cookiecutter.crate_keywords.split()|join('", "') }}"]
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
