[package]
name = "{{ cookiecutter.crate_name }}"
version = "{{ cookiecutter.version }}"
authors = { workspace = true }
# See https://crates.io/category_slugs for valid categories
categories = ["{{ cookiecutter.crate_categories.split()|join('", "') }}"]
description = "{{ cookiecutter.crate_description }}"
edition = { workspace = true }
# See https://crates.io/keywords for the common keywords
keywords = ["{{ cookiecutter.crate_keywords.split()|join('", "') }}"]
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }

# At least one crate must have this configuration
[package.metadata.release]
pre-release-replacements = [
    { file = "../../CHANGELOG.md", search = "Unreleased", replace = "{{ '{{version}}' }}", min = 1 },
    { file = "../../CHANGELOG.md", search = "\\.\\.\\.HEAD", replace="...{{ '{{tag_name}}' }}", exactly = 1 },
    { file = "../../CHANGELOG.md", search = "ReleaseDate", replace= "{{ '{{date}}' }}", min = 1 },
    { file = "../../CHANGELOG.md", search = "<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly = 1 },
    { file = "../../CHANGELOG.md", search = "<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/{{ cookiecutter.github_org }}/{{ cookiecutter.repo_name }}/compare/{{ '{{tag_name}}' }}...HEAD", exactly = 1 },
]

[dependencies]
