[package]
name = "mc-crate-name"
version = "0.1.0"
authors = ["MobileCoin"]
# See https://crates.io/category_slugs for valid categories
categories = ["cryptography", "no-std"]
description = "A brief summary of the crate"
edition = "2021"
# See https://crates.io/keywords for the common keywords
keywords = ["blockchain", "serde"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/repository"
rust-version = "1.68"

[profile.release]
lto = "thin"

[package.metadata.release]
shared-version = true
dev-version-ext = "beta.0"
consolidate-commits = true
consolidate-pushes = true
tag-name = "v{{version}}"
pre-release-replacements = [
    { file = "README.md", search = "mc-[a-z-]+/[0-9.]+", replace = "{{crate_name}}/{{version}}" },
    { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}", min = 1 },
    { file = "CHANGELOG.md", search = "\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "ReleaseDate", replace= "{{date}}", min = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/mobilecoinfoundation/repository/compare/{{tag_name}}...HEAD", exactly = 1 },
]

[dependencies]