[workspace]
members = [
    "crate/name",
]

# We need to explicitly specify resolver 2.
# We shouldn't have to per https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html, but that does not appear to be the case
resolver = "2"

[workspace.package]
authors = ["MobileCoin"]
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/mobilecoinfoundation/repository"
rust-version = "1.68"

[profile.release]
lto = "thin"

[workspace.metadata.release]
shared-version = true
dev-version-ext = "beta.0"
consolidate-commits = true
consolidate-pushes = true
tag-name = "v{{version}}"
pre-release-replacements = [
    { file = "README.md", search = "mc-[a-z-]+/[0-9.]+", replace = "{{crate_name}}/{{version}}" },
    { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}", min = 1 },
    { file = "CHANGELOG.md", search = "\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "ReleaseDate", replace= "{{date}}", min = 1},
    { file = "CHANGELOG.md", search = "<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/mobilecoinfoundation/repository/compare/{{tag_name}}...HEAD", exactly = 1},
]
